CSS básico feito

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
          src="https://kit.fontawesome.com/401b17d60b.js"
          crossorigin="anonymous"
       ></script>
+      <!-- ? CSS -->
+      <link rel="stylesheet" href="./assets/css/style.css" />
    </head>
    <body>
       <h1>To do list - JS Vanilla</h1>
@@ -28,30 +30,20 @@
          <div class="tasks">
             <div class="task">
                <span class="task-text">Guilherme</span>
-               <i class="fa-solid fa-trash"></i>
+               <i class="task-icon fa-solid fa-pen" title="Edit"></i>
+               <i class="task-icon fa-solid fa-trash" title="Delete"></i>
             </div>
             <div class="task">
-               <span class="task-text">GuilhermeGuilhermeGuilhermeGuilhermeGuilhermeGuilhermeGuilherme</span>
-               <i class="fa-solid fa-trash"></i>
-            </div>
-            <div class="task">
-               <span class="task-text"></span>
-               <i class="fa-solid fa-trash"></i>
-            </div>
-            <div class="task">
-               <span class="task-text"></span>
-               <i class="fa-solid fa-trash"></i>
-            </div>
-            <div class="task">
-               <span class="task-text"></span>
-               <i class="fa-solid fa-trash"></i>
+               <span class="task-text">GuilhermeGuilhermeGuilhermeGuilhermeGuilhermeGuilherme</span>
+               <i class="task-icon fa-solid fa-pen" title="Edit"></i>
+               <i class="task-icon fa-solid fa-trash" title="Delete"></i>
             </div>
          </div>
       </div>
 
       <p>
          Development by
-         <a href="https://github.com/guilhermedevmatos15"
+         <a href="https://github.com/guilhermedevmatos15" target="_blank" rel="nofollow"
             >@https://github.com/guilhermedevmatos15</a
          >
       </p>
