JS básico feito, falta programar a edição das tarefas.

--- a/index.html
+++ b/index.html
@@ -28,16 +28,7 @@
          </form>
 
          <div class="tasks">
-            <div class="task">
-               <span class="task-text">Guilherme</span>
-               <i class="task-icon fa-solid fa-pen" title="Edit"></i>
-               <i class="task-icon fa-solid fa-trash" title="Delete"></i>
-            </div>
-            <div class="task">
-               <span class="task-text">GuilhermeGuilhermeGuilhermeGuilhermeGuilhermeGuilherme</span>
-               <i class="task-icon fa-solid fa-pen" title="Edit"></i>
-               <i class="task-icon fa-solid fa-trash" title="Delete"></i>
-            </div>
+
          </div>
       </div>
 
@@ -47,5 +38,8 @@
             >@https://github.com/guilhermedevmatos15</a
          >
       </p>
+
+      <!-- ? JS -->
+      <script src="./assets/js/script.js"></script>
    </body>
 </html>
