Ajustando detalhes no index.html

--- a/index.html
+++ b/index.html
@@ -27,9 +27,8 @@
             <button class="btn"><i class="fa-solid fa-plus"></i> Add</button>
          </form>
 
-         <div class="tasks">
-
-         </div>
+         <!-- Manipulate in JS -->
+         <div class="tasks"></div>
       </div>
 
       <p>
