--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
          >
       </p>
 
-      <div class="edit active">
+      <div class="edit">
          <h2>Editing: <span class="edit-id"></span></h2>
 
          <form action="#">
             <input type="text" maxlength="100" placeholder="Tarefing..." />
-            <button class="btn"><i class="fa-solid fa-pen"></i> Edit</button>
-            <button class="btn">
+            <button class="btn" data-func="edit"><i class="fa-solid fa-pen"></i> Edit</button>
+            <button class="btn" data-func="cancel">
                <i class="fa-solid fa-xmark"></i> Cancel
             </button>
          </form>
