--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             href="https://github.com/guilhermedevmatos15"
             target="_blank"
             rel="nofollow"
-            >@https://github.com/guilhermedevmatos15</a
+            >@guilhermedevmatos15</a
          >
       </p>
 
